fix: deleted 100vh headers height on mobile

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -75,7 +75,7 @@ body {
     }
     @media(max-width: $mobile) {
         padding: 0 1rem 1rem;
-        height: 100vh;
+        // height: 100vh;
     }
 }
 
